--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,23 +4,19 @@
 #com.simgle.jdbc-cp.data-source.password=123456
 #com.simgle.jdbc-cp.data-source.minimumIdle=25
 #com.simgle.jdbc-cp.data-source.maximumPoolSize=25
-
 com.simgle.jdbc-cp.default-data-source-key=simgle
-
 com.simgle.jdbc-cp.data-sources.simgle.jdbcUrl=jdbc:mysql://127.0.0.1:3306/simgle?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 com.simgle.jdbc-cp.data-sources.simgle.driverClassName=com.mysql.cj.jdbc.Driver
 com.simgle.jdbc-cp.data-sources.simgle.username=root
 com.simgle.jdbc-cp.data-sources.simgle.password=123456
 com.simgle.jdbc-cp.data-sources.simgle.minimumIdle=25
 com.simgle.jdbc-cp.data-sources.simgle.maximumPoolSize=25
-
 com.simgle.jdbc-cp.data-sources.icsdb2.jdbcUrl=jdbc:mysql://127.0.0.1:3306/ICSDB2?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 com.simgle.jdbc-cp.data-sources.icsdb2.driverClassName=com.mysql.cj.jdbc.Driver
 com.simgle.jdbc-cp.data-sources.icsdb2.username=root
 com.simgle.jdbc-cp.data-sources.icsdb2.password=123456
 com.simgle.jdbc-cp.data-sources.icsdb2.minimumIdle=25
 com.simgle.jdbc-cp.data-sources.icsdb2.maximumPoolSize=25
-
 #hibernate配置
 spring.jpa.properties.hibernate.hbm2ddl.auto=none
 spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
@@ -28,3 +24,10 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+#spring-jpa配置
+spring.jpa.open-in-view=true
+#服务端口
+server.port=8081
+#信任客户端
+cors.domains.client.mapping=/**
+cors.domains.client.origins=http://127.0.0.1:8080,http://localhost:8080
